--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,16 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.springframework:spring-webflux:5.2.3.RELEASE"
     implementation "org.jsoup:jsoup:1.12.1"
 
-    testImplementation "org.spekframework.spek2:spek-dsl-jvm:2.0.9"
+    testImplementation("io.kotlintest:kotlintest-runner-junit5:3.3.3")
+
 }
 
 compileKotlin {
